# DriftBot

./: .gitignore  Makefile  README.md  fedora-deps.sh  pyproject.toml
src/: main.py  test.py
src/cogs/: Create_speaker.py  TTS_COG.py  __init__.py  ai_cover_cog.py  ping.py  soundboards.py
src/cogs/RVC/: __init__.py  rvc.py
